--- a/CSSOdev2/index.html
+++ b/CSSOdev2/index.html
@@ -29,10 +29,10 @@
             
         </article>
         <article class="box-3">
-            <a href="help.html">Help!</a> <br>
-            <a href="about.html">About Google!</a> <br>
-            <a href="company.html">Company Info</a> <br>
-            <a href="stickers.html">Google! Logos</a> <br>
+            <a href="https://web.archive.org/web/19990221212930if_/http://www.google.com/help.html">Help!</a> <br>
+            <a href="https://web.archive.org/web/19990427105230if_/http://www.google.com/about.html">About Google!</a> <br>
+            <a href="https://web.archive.org/web/19990221202430if_/http://www.google.com/company.html">Company Info</a> <br>
+            <a href="https://web.archive.org/web/19990224043535if_/http://www.google.com/stickers.html">Google! Logos</a> <br>
         </article>
         <article class="box-4">
             Special Searches<br>
